--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -102,6 +102,13 @@
           "target": [
             "TargetView1"
           ]
+        },
+        {
+          "name": "AgencyDetails",
+          "pattern": "AgencyDetails/{agynId}",
+          "target": [
+            "TargetAgencyDetails"
+          ]
         }
       ],
       "targets": {
@@ -111,6 +118,13 @@
           "clearControlAggregation": false,
           "viewId": "View1",
           "viewName": "View1"
+        },
+        "TargetAgencyDetails" : {
+          "viewType": "XML",
+          "transition": "slide",
+          "clearControlAggregation": false,
+          "viewId": "AgencyDetails",
+          "viewName": "AgencyDetails"
         }
       }
     },
